# ls-arch-validator

./: .env.example  .gitignore  index.html  pyproject.toml
.github/workflows/: validate.yml
.specify/memory/: constitution.md
assets/: styles.css
config/: defaults.yaml  diagram_sources.yaml  sources.yaml  timeouts.yaml
data/: history.json  latest.json  registry.json
data/runs/: run-20260103-035356.json
docs/: architecture.md  index.html
docs/assets/: styles.css
docs/data/: history.json  index.json  latest.json  latest.json.old  registry.json
docs/data/objects/app/: 28a725cb3856512f.json  5ef475955abb748f.json  62e283ed27ac18cd.json  (+5 more)
specs/001-arch-validator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-arch-validator/checklists/: requirements.md
specs/001-arch-validator/contracts/: architecture.schema.json  architecture_result.schema.json  cli.md  failure_tracker.schema.json  validation_run.schema.json
src/: __init__.py  cli.py
src/config/: __init__.py  settings.py
src/generator/: __init__.py  analyzer.py  prompts.py  synthesizer.py  validator.py
src/miner/: __init__.py  builtin.py  converter.py  diagram_parser.py  normalizer.py
src/miner/sources/: __init__.py  base.py  diagrams.py  quickstart.py  serverless.py  solutions.py  terraform.py
src/models/: __init__.py  architecture.py  coverage.py  results.py
src/pipeline/: __init__.py  guards.py
src/processor/: __init__.py  machine.py  runner.py  states.py
src/registry/: __init__.py  tracker.py
src/reporter/: __init__.py  aggregator.py  downloads.py  issues.py  notifications.py  site.py  storage.py  trends.py
src/runner/: __init__.py  container.py  executor.py  orchestrator.py
src/utils/: __init__.py  atomic.py  cache.py  logging.py  result.py  tokens.py
templates/: base.html  index.html
templates/partials/: code_viewer.html  failure_list.html  lazy_result_card.html  passing_list.html  probe_apps.html  service_matrix.html  source_info.html  summary_cards.html  trend_chart.html
(+9 files in other folders)
